# UI-R1

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  bench_corpus.txt  bench_corpus_extended.txt  bench_determinism.py  cura_cicli_e_composti.py  curate_core.py  curate_kg.py  curate_kg_procedurale.py  curate_kg_self.py  deploy.sh  kg_lint.py  prometeo_kg.json  prometeo_kg_procedurale.json  prometeo_kg_self.json
campovasto/: CLAUDE.md  app.js  community.html  index.html  regole di design.md  roadmap UX.md  style.css
campovasto-mobile/: app.js  index.html  style.css
campovasto/fonts/: jetbrains-mono.css
campovasto/icons/: CREDITS.md
campovasto/js/: constants.js  editor.js  field.js  filters.js  geometry.js  graph-fast.js  graph.js  history.js  manager.js  node-style.js  rel-legend.js  relations-extract.js  sentence.js  sidebar.js  theme.js  ui-state.js
campovasto/js/components/: confirm-panel.js  ctx-menu.js  dim-editor.js  dim-overlay.js  edit-panel.js  expand-animation.js  exploration-trail.js  extract-dialog.js  graph-toolbar.js  overlay.js
campovasto/js/layouts/: rectangular.js
campovasto/js/policies/: word.js
data/: phase70_signed_words.txt
data/anchors/: fractal_signatures.tsv  hub_candidates.tsv  hub_signatures.tsv
data/kg/: agent_kg_existential.tsv  agent_kg_self.tsv  bigbang_kg.tsv  conversational_core.tsv  curated_a_g.tsv  curated_ethics.tsv  curated_human_world.tsv  curated_identity.tsv  curated_language.tsv  curated_nature.tsv  curated_perception.tsv  curated_technology.tsv  curated_time_math_art.tsv  discursive_knowledge.tsv  interrogative_bridges.tsv  italian_core.tsv  kaikki_relations.tsv  master_curation_export.tsv  master_nodes_importance.tsv  nucleus.tsv  phenomenology.tsv  ui_r1_curated.tsv  whitelist.txt
data/saved_fields/: vogliamo_un_futuro_bello_2.json
docs/: ARCHITECTURAL_AUDIT_P67.md  ARCHITECTURE.md  FILOSOFIA.md  registri_disambiguazione.md
docs/Futuro/: PROMETEO_OS_FIRMWARE_SPEC.md  PROMETEO_OS_HARDWARE.md  PROMETEO_RESONANT_COMPUTER_PROPOSAL.md  TECHNICAL_DEEP_ANALYSIS.md  TECHNICAL_DEEP_ANALYSIS_PART2.md
docs/wiki/: COME_USARE_OBSIDIAN.md  index.md  log.md
examples/: educazione_base.txt
experiments/: EXECUTIVE_SUMMARY.md  README.md  WAVE_ROADMAP.md  acoustic_poc.py  prometeo_computer_64.py  prometeo_resonant_architecture.py  resonant_substrate_sim.py  wave_simulation.py
roadmap_futuro/: PROMETEO_OS_CIRCUIT_DESIGN.md
src/: lib.rs  main.rs
src/topology/: action_reasoning.rs  analisi_logica.rs  comprehension_graph.rs  comprehension_path.rs  comprehension_report.rs  correction.rs  deliberation.rs  derivation.rs  desire.rs  dimensional.rs  engine.rs  events.rs  expression.rs  fractal.rs  grammar.rs  growth.rs  haiku_memory.rs  humor.rs  identity.rs  inference.rs  input_reading.rs  inquiry.rs  interlocutor.rs  kg_proc_field.rs  kg_self.rs  knowledge_graph.rs  lexicon.rs  llm_substrate.rs  llm_substrate_qwen35.rs  locus.rs  memory.rs  mod.rs  narrative.rs  need.rs  needs.rs  path_collapse.rs  pattern_matcher.rs  persistence.rs  pf1.rs  polar_twin.rs  (+21 more)
src/web/: api.rs  comprensione.html  conversations.rs  index.html  mod.rs  server.rs  state.rs
tools/: README.md  run_agent.bat
tools/agent/: __init__.py  logger.py  loop.py  ollama_client.py  prometeo_bridge.py  tools.py
tools/steering/: system_prompt.md
viste/: frattali.html  hub.html  stato-interno.html
(+115 files in other folders)
