[package]
name = "prometeo"
version = "6.0.0"
edition = "2021"
authors = ["Prometeo Architects"]
description = "Sistema cognitivo olografico deterministico - Versione Standalone"

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ndarray = { version = "0.15", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng", "std_rng"] }
rand_distr = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
memmap2 = "0.9"
bincode = "1.3"
crc32fast = "1.3"
regex = "1.10"

# Threading
tokio = { version = "1.40", features = ["full"] }

# Web UI - Axum + HTML/JS (senza Leptos per stabilità)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "set-header", "compression-gzip", "compression-br"], optional = true }
http = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }

# JNI — solo per build Android
jni = { version = "0.21", features = [], optional = true }

# Phase 82 — MCP (Model Context Protocol) integration: prometeo-mcp espone
# UI-r1 come server MCP via stdio, in modo che un LLM client (Claude Desktop,
# Claude Code, etc.) possa abitare UI-r1 come substrato cognitivo strutturato.
# HTTP-wrapper: prometeo-mcp parla MCP con il client e fa requests REST al
# server prometeo-web (che deve essere acceso). Single engine, single state.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = []
web = ["axum", "tower", "tower-http", "http", "sha2"]
# android: cdylib con server embedded — compila con cargo-ndk
android = ["web", "jni"]
# Phase 82: MCP server binary
mcp = ["rmcp", "reqwest"]

[lib]
name = "prometeo"
path = "src/lib.rs"
# cdylib richiesto per Android JNI (.so); rlib per i test e i bin normali
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "prometeo"
path = "src/main.rs"

[[bin]]
name = "prometeo-web"
path = "src/web/main.rs"
required-features = ["web"]

[[bin]]
name = "sense-test"
path = "src/bin/sense_test.rs"

[[bin]]
name = "dream-test"
path = "src/bin/dream_test.rs"

[[bin]]
name = "conversation-test"
path = "src/bin/conversation_test.rs"

[[bin]]
name = "diag-lexicon"
path = "src/bin/diag_lexicon.rs"

[[bin]]
name = "teach-corpus"
path = "src/bin/teach_corpus.rs"

[[bin]]
name = "fix-post-corpus"
path = "src/bin/fix_post_corpus.rs"

[[bin]]
name = "import-kg"
path = "src/bin/import_kg.rs"

[[bin]]
name = "rebuild-semantic-topology"
path = "src/bin/rebuild_semantic_topology.rs"

[[bin]]
name = "test-grammar"
path = "src/bin/test_grammar.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[[bin]]
name = "reset-simplices"
path = "src/bin/reset_simplices.rs"

[[bin]]
name = "rederive-signatures"
path = "src/bin/rederive_signatures.rs"

# Phase 82 — MCP server: espone UI-r1 come substrato strutturato a LLM client
# via Model Context Protocol (stdio transport). Richiede `--features mcp`.
[[bin]]
name = "prometeo-mcp"
path = "src/bin/prometeo_mcp.rs"
required-features = ["mcp"]
